# crewAI-example-marketer-ui

./: .env.example  LICENSE  README.md  app.py  celery_config.py  crew_logic.py  docker-compose.yml  dump.rdb  prompt-sample.md  pyproject.toml  socket_handlers.py
src/marketing_posts/: crew.py  main.py
src/marketing_posts/config/: agents.yaml  tasks.yaml
templates/: index.html  results.html
